ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: nginx-ingress
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 tls:
 - hosts:
   - localhost
   secretName: tls-secret
 rules:
 - host: localhost
   http:
    paths:
    - path: /
      pathType: Prefix
      backend:
       service:
        name: nginx-service
        port:
         number: 80
